# eprofiler-tui

./: .dockerignore  Cargo.toml  Containerfile  Dockerfile  README.md  build.rs
.github/: dependabot.yml
.github/workflows/: docker.yaml  release.yaml  test.yaml
proto/: Cargo.toml  build.rs
proto/src/: lib.rs
src/: error.rs  flamegraph.rs  grpc.rs  main.rs  storage.rs
src/debug/: mod.rs  server.rs  ui.rs
src/tui/: mod.rs  state.rs  ui.rs
src/tui/state/: executables.rs  flamegraph.rs
