[package]
name = "eprofiler-tui"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Terminal-based flamegraph viewer that receives profiling data via OTLP gRPC and renders live, interactive flamegraphs"
homepage = "https://github.com/rogercoll/eprofiler-tui"
repository = "https://github.com/rogercoll/eprofiler-tui"
readme = "README.md"
keywords = ["opentelemetry", "profiling", "flamegraph", "tui", "otlp"]
categories = ["command-line-utilities", "visualization", "development-tools::profiling"]

[dependencies]
better-panic = "0.3"
clap = { version = "4.5.57", features = ["derive"] }
prost = "0.13"
ratatui = "0.29"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
tonic = { version = "0.12", features = ["gzip"] }

[build-dependencies]
tonic-build = "0.12"

[dev-dependencies]
tokio-stream = { version = "0.1.18", features = ["net"] }
