[package]
name = "eprofiler-tui"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "Terminal-based flamegraph viewer that receives profiling data via OTLP gRPC and renders live, interactive flamegraphs"
homepage = "https://github.com/rogercoll/eprofiler-tui"
repository = "https://github.com/rogercoll/eprofiler-tui"
readme = "README.md"
keywords = ["opentelemetry", "profiling", "flamegraph", "tui", "otlp"]
categories = ["command-line-utilities", "visualization", "development-tools::profiling"]

[workspace]
members = ["proto"]

[dependencies]
better-panic = "0.3"
clap = { version = "4.5.59", features = ["derive"] }
eprofiler-proto = { path = "proto" }
ratatui = "0.30"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
tonic = { version = "0.14", features = ["gzip"] }

[dev-dependencies]
tokio-stream = { version = "0.1.18", features = ["net"] }
