[package]
name = "eprofiler-tui"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "Terminal-based flamegraph viewer that receives profiling data via OTLP gRPC and renders live, interactive flamegraphs"
homepage = "https://github.com/rogercoll/eprofiler-tui"
repository = "https://github.com/rogercoll/eprofiler-tui"
readme = "README.md"
keywords = ["opentelemetry", "profiling", "flamegraph", "tui", "otlp"]
categories = ["command-line-utilities", "visualization", "development-tools::profiling"]

[workspace]
members = ["proto"]
exclude = ["opentelemetry-ebpf-profiler"]

[dependencies]
better-panic = "0.3"
clap = { version = "4.6.0", features = ["derive"] }
eprofiler-proto = { path = "proto" }
ratatui = "0.30"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
tonic = { version = "0.14", features = ["gzip"] }
symblib = { version = "*", path = "./opentelemetry-ebpf-profiler/rust-crates/symblib" }
indexmap = "2.13.0"
fjall = "3.1.3"
zerocopy = { version = "0.8", features = ["derive"] }
directories = "6.0.0"

[dev-dependencies]
tempfile = "3.27.0"
tokio-stream = { version = "0.1.18", features = ["net"] }

[[example]]
name = "sleep-pattern-flamescope"
path = "examples/sleep_pattern.rs"
